# Cloud-based-Data-Storage-and-Analysis-System-using-QT

./: README.md
FlightSafetyAnalyzer/: CMakeLists.txt  main.cpp
FlightSafetyDashboard/: CMakeLists.txt  FlightSafetyDashboard.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  safetyanalysis.h
SafetyAnalysis/: CMakeLists.txt  SafetyAnalysis_global.h  safetyanalysis.cpp
cloud_storage/: flight_20260619_173351.json
